# appV2/model/book.go
@@ -17,17 +17,11 @@ func GetBook(id int64) BookInfo {
 }
 func SearchBook(ISBN, bookName string) []BookInfo {
 	var books []BookInfo
-	var books1 []BookInfo
-	sql := "select * from book_info"
-	err := Conn.Raw(sql).Scan(&books).Error
-	if ISBN != "" || bookName != "" {
-		sql = "select * from book_info where ISBN like ? and book_name like ?"
-		err = Conn.Raw(sql, ISBN+"%", "%"+bookName+"%").Find(&books1).Error
-		if err != nil {
-			fmt.Println(err.Error())
-			return nil
-		}
-		return books1
+	sql := "select * from book_info where ISBN like ? and book_name like ?"
+	err := Conn.Raw(sql, ISBN+"%", "%"+bookName+"%").Find(&books).Error
+	if err != nil {
+		fmt.Println(err.Error())
+		return nil
 	}
 	return books
 }
